Angular error - less file not loading

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,8 @@
     <link rel="stylesheet" href="styles/style.css">
     <!-- endbuild -->
     
-	<link rel="stylesheet" href="css/eirenerx.css" />
+	
+	<link rel="stylesheet/less" href="css/eirenerx.less" />
     
 </head>
 
